--- a/styles/_presets.scss
+++ b/styles/_presets.scss
@@ -3,7 +3,11 @@ $widthBoxes: 100%;
 $leftWidth: 17rem;
 $totalWidth: calc(100% - $leftWidth);
 $centerWidth: calc($totalWidth / 2);
+$centerWidthADJ: calc($centerWidth * 1.2);
+// calc(((100% - 17rem) / 2) * 1.2);
+// calc((100% - 17rem) - calc(((100% - 17rem) / 2) * 1.2));
 $rightWidth: calc($totalWidth / 2);
+$rightWidthADJ: calc($totalWidth - $centerWidthADJ);
 $myWorkHeight: 975px;
 $myWorkWidth: calc(100% - $leftWidth);
 $lightFont: aliceblue;
