--- a/styles/index-master.scss
+++ b/styles/index-master.scss
@@ -14,6 +14,10 @@ html {
 	overflow-x: hidden; /* Hide horizontal scrollbar */
 	font-size: 62.5%;
 	min-width: 320px;
+	input::-webkit-outer-spin-button,
+	input::-webkit-inner-spin-button {
+		-webkit-appearance: none;
+	}
 }
 
 body {
