--- a/styles/index-master.scss
+++ b/styles/index-master.scss
@@ -30,7 +30,7 @@ body {
 	min-width: 320px;
 	font-family: "Open Sans", sans-serif;
 	color: #fff;
-	padding-left: 13rem;
+	// padding-left: 13rem;
 	overflow-y: hidden;
 	overflow-x: hidden;
 }
