--- a/styles/myWork.css
+++ b/styles/myWork.css
@@ -10,6 +10,8 @@ html {
 body {
   /* scrollbar-width: none; is to hide firefox inner scrollbar */
   scrollbar-width: none;
+  width: calc(100% - 17rem);
+  margin-left: 17rem;
 }
 
 ::-webkit-scrollbar {
@@ -24,48 +26,62 @@ body {
   display: flex;
   flex-wrap: wrap;
   padding-right: 16px;
-  padding-left: 56px;
+  padding-left: 16px;
   padding-top: 16px;
   padding-bottom: 16px;
   grid-gap: 16px;
+  height: 100%;
 }
 
-@media (max-width: 1119px) {
-  .grid {
-    padding-right: -16rem !important;
-  }
-}
-.grid .child {
-  background-color: rgba(0, 0, 230, 0.192);
-  padding: 60px;
+.child {
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
-  display: flex;
-  flex: 1 0 140px;
+  height: 100px;
+  width: 100%;
+  padding: 60px;
+  background-color: rgba(0, 0, 230, 0.192);
+  flex: 1 0 20%;
   outline: blue solid 2px;
+  overflow: hidden;
 }
 
 img {
   display: block;
-  max-height: 10vh;
-  max-width: 10vw;
-  min-height: 5vh;
-  min-width: 5vw;
+  height: 75px;
+  width: 75px;
   aspect-ratio: 1/1;
   display: flex;
   justify-content: center;
   align-items: center;
+  opacity: 1;
+  transition: 1s;
 }
 
 .link-spanner {
+  display: flex;
   position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
   z-index: 1;
+  opacity: 0;
 }
 
-/*# sourceMappingURL=myWork.css.map */
+.child:hover > img {
+  opacity: 1;
+  position: relative;
+  transform: translate(0%, -400%);
+  overflow: hidden;
+}
+
+.link-spanner:hover {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 2s;
+  opacity: 1;
+  color: yellow;
+}/*# sourceMappingURL=myWork.css.map */
