--- a/styles/skills-rotate.css
+++ b/styles/skills-rotate.css
@@ -5,11 +5,14 @@
   --easing: cubic-bezier(0, 0.37, 1, 0.63);
 }
 
+#rightBox {
+  width: 280px !important;
+}
+
 .void {
-  width: 100%;
-  max-width: 1024px;
+  width: 785px;
   position: relative;
-  transform: translateX(50%);
+  left: 200px;
 }
 
 #card-list {
@@ -17,7 +20,7 @@
   /* margin: 0; */
   padding: 0;
   position: relative;
-  width: 120%;
+  width: 840px;
   aspect-ratio: 1/1;
   /* outline: 2px dotted magenta; */
   z-index: 1;
@@ -27,14 +30,14 @@
   position: absolute;
   top: 50%;
   /* 	outline: 2px dashed cyan; */
-  width: 105%;
-  left: -18%;
+  width: 900px;
+  left: -126px;
   animation: rotateCW calc(var(--rotate-speed) * 1s) var(--easing) infinite;
 }
 
 .card {
-  width: 8%;
-  padding: 16px 24px;
+  width: 56px;
+  margin-left: -26px;
   animation: rotateCCW calc(var(--rotate-speed) * 1s) var(--easing) infinite;
 }
 
@@ -94,10 +97,10 @@ li:nth-child(11) .card {
 
 @keyframes rotateCW {
   from {
-    transform: translate3d(0px, 0%, -1px) rotate(-200deg);
+    transform: translate3d(0px, 120%, -1px) rotate(-200deg);
   }
   to {
-    transform: translate3d(0px, -100%, 0px) rotate(-500deg);
+    transform: translate3d(0px, -190%, 0px) rotate(-500deg);
   }
 }
 @keyframes rotateCCW {
@@ -113,19 +116,18 @@ li:nth-child(11) .card {
 .last-circle {
   position: absolute;
   aspect-ratio: 1/1;
-  left: 35%;
+  left: 245px;
   top: 50%;
   transform: translate(-50%, -50%);
   box-shadow: 0px 18px 36px -18px rgba(12, 5, 46, 0.3), 0px 30px 60px -12px rgba(12, 5, 46, 0.25);
 }
 
 .center-circle {
-  width: 55%;
-  height: 50%;
+  width: 385px;
+  height: 385px;
   display: block;
-  right: 100%;
   background: rgb(135, 106, 99);
-  opacity: 0.75;
+  opacity: 1;
   background-image: url("../images/Me.jpg");
   background-position: 10%;
   background-size: cover;
@@ -134,14 +136,14 @@ li:nth-child(11) .card {
 }
 
 .second-circle {
-  width: 84%;
+  width: 588px;
   background: rgb(135, 106, 99);
   opacity: 0.5;
   border-radius: 50% 0% 0% 50%;
 }
 
 .last-circle {
-  width: 115%;
+  width: 805px;
   background: #50413e;
   opacity: 1;
   border-radius: 50% 0% 0% 50%;
