--- a/styles/skills-rotate.scss
+++ b/styles/skills-rotate.scss
@@ -5,14 +5,19 @@
 	--easeInOutSine: cubic-bezier(0.37, 0, 0.63, 1);
 	--easing: cubic-bezier(0, 0.37, 1, 0.63);
 }
+#rightBox {
+	width: 280px !important;
+}
 
 .void {
-	width: 100%;
-	max-width: 1024px;
+	width: 785px;
+	// max-width: 1024px;
 	// margin: auto;
 	position: relative;
 	// aspect-ratio: 1 / 1;
-	transform: translateX(50%);
+	// transform: translateX(350px);
+	left: 200px;
+	// outline: 1px dotted yellow;
 }
 // #card-list:hover * {
 // 	animation-play-state: paused;
@@ -23,7 +28,7 @@
 	padding: 0;
 	position: relative;
 	// change width: 120%; for inner circle
-	width: 120%;
+	width: 840px;
 	aspect-ratio: 1 / 1;
 	/* outline: 2px dotted magenta; */
 	z-index: 1;
@@ -35,18 +40,19 @@
 	// transform: translateY(-50%);
 	/* 	outline: 2px dashed cyan; */
 	// WAS:: width: 120%;
-	width: 105%;
+	width: 900px;
 	// WAS:: left: -140px;
-	left: -18%;
+	left: -126px;
 	animation: rotateCW calc(var(--rotate-speed) * 1s) var(--easing) infinite;
 }
 
 .card {
-	width: 8%;
+	width: 56px;
 	// display: flex;
 	// flex-direction: column;
 	// align-items: flex-start;
-	padding: 16px 24px;
+	// padding: 16px 24px;
+	margin-left: -26px;
 	// gap: 8px;
 	// background: $secondColor;
 	// box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1), 0px 16px 32px rgba(0, 0, 0, 0.1);
@@ -119,10 +125,10 @@ li:nth-child(11) .card {
 @keyframes rotateCW {
 	from {
 		// transform: translate3d(0px, -50%, -1px) rotate(-230deg);
-		transform: translate3d(0px, 0%, -1px) rotate(-200deg);
+		transform: translate3d(0px, 120%, -1px) rotate(-200deg);
 	}
 	to {
-		transform: translate3d(0px, -100%, 0px) rotate(-500deg);
+		transform: translate3d(0px, -190%, 0px) rotate(-500deg);
 	}
 }
 @keyframes rotateCCW {
@@ -141,18 +147,18 @@ $circleColor: $fourthColor;
 .last-circle {
 	position: absolute;
 	aspect-ratio: 1 / 1;
-	left: 35%;
+	left: 245px;
 	top: 50%;
 	transform: translate(-50%, -50%);
 	box-shadow: 0px 18px 36px -18px rgba(12, 5, 46, 0.3), 0px 30px 60px -12px rgba(12, 5, 46, 0.25);
 }
 .center-circle {
-	width: 55%;
-	height: 50%;
+	width: 385px;
+	height: 385px;
 	display: block;
-	right: 100%;
+	// right: 100%;
 	background: $circleColor;
-	opacity: 0.75;
+	opacity: 1;
 	background-image: url("../images/Me.jpg");
 	background-position: 10%;
 	background-size: cover;
@@ -160,13 +166,13 @@ $circleColor: $fourthColor;
 	border-radius: 50% 0% 0% 50%;
 }
 .second-circle {
-	width: 84%;
+	width: 588px;
 	background: $circleColor;
 	opacity: 0.5;
 	border-radius: 50% 0% 0% 50%;
 }
 .last-circle {
-	width: 115%;
+	width: 805px;
 	background: #50413e;
 	opacity: 1;
 	border-radius: 50% 0% 0% 50%;
