--- a/styles/_leftBox.scss
+++ b/styles/_leftBox.scss
@@ -153,11 +153,16 @@
 			svg {
 				width: 2rem;
 			}
-			svg.SVGgithub {
-				width: 1rem;
+			svg.githubSVG {
+				width: 2rem;
+				// outline: 1px solid yellow;
 			}
-			svg.SVGlinkedin {
-				width: 1rem;
+			svg.linkedinSVG {
+				width: 2rem;
+				// outline: 1px solid yellow;
+			}
+			svg.dlSVG {
+				width: 2.5rem;
 			}
 			svg path {
 				-webkit-transition: fill 0.3s;
