--- a/styles/resume.css
+++ b/styles/resume.css
@@ -77,6 +77,7 @@
   width: 100%;
   height: 100%;
   background-color: rgb(0, 0, 230);
+  flex-direction: column;
 }
 .main_container .outer_container .left_container .leftSkillsInfo .skill-headers {
   display: block;
@@ -134,18 +135,27 @@
   color: rgb(212, 175, 165);
   margin: 0;
 }
-.rightContainer header #name {
+.rightContainer #profile-header {
+  width: 100%;
+}
+.rightContainer #profile-header #profile-header-container {
+  display: flex;
+  position: relative;
+  width: 100%;
+}
+.rightContainer #profile-header #profile-header-container #name {
+  flex-direction: row;
   color: rgb(189, 211, 175);
   font-size: 10rem;
   margin-top: 7%;
   line-height: 85px;
   margin-bottom: 1rem;
 }
-.rightContainer header h2 {
+.rightContainer #profile-header h2 {
   color: rgb(135, 106, 99);
   font-size: 3rem;
 }
-.rightContainer header p {
+.rightContainer #profile-header p {
   max-width: 70%;
   color: aliceblue;
   font-size: 2.1rem;
@@ -153,6 +163,7 @@
 .rightContainer section ul {
   list-style: none;
   padding: 0;
+  color: aliceblue;
 }
 .rightContainer section .skill-lists {
   padding: 0;
@@ -161,6 +172,7 @@
 }
 .rightContainer section .skill-lists .titleInfo {
   margin-bottom: -20px;
+  font-weight: 400;
 }
 .rightContainer section .skill-lists .firstInfo {
   margin-top: 0;
@@ -203,7 +215,7 @@
   }
 }
 @media only screen and (max-width: 1000px) {
-  .rightContainer header #name {
+  .rightContainer #profile-header #profile-header-container #name {
     color: rgb(189, 211, 175);
     font-size: 8rem;
     line-height: 70px;
@@ -219,7 +231,7 @@
   }
 }
 @media only screen and (max-width: 900px) {
-  .rightContainer header #name {
+  .rightContainer #profile-header #profile-header-container #name {
     color: rgb(189, 211, 175);
     font-size: 7rem;
     line-height: 60px;
@@ -235,7 +247,7 @@
   }
 }
 @media only screen and (max-width: 600px) {
-  .rightContainer header #name {
+  .rightContainer #profile-header #profile-header-container #name {
     color: rgb(189, 211, 175);
     font-size: 5rem;
     line-height: 45px;
@@ -249,4 +261,106 @@
     color: aliceblue;
     font-size: 1.6rem;
   }
+}
+#wrap {
+  margin-top: 80px;
+  text-align: center;
+}
+
+.dl-icon {
+  filter: invert(92%) sepia(74%) saturate(3126%) hue-rotate(179deg) brightness(110%) contrast(104%);
+}
+
+.btn-slide2:hover span svg.dl-icon {
+  filter: invert(82%) sepia(7%) saturate(833%) hue-rotate(53deg) brightness(99%) contrast(91%);
+}
+
+.btn-slide2 {
+  position: relative;
+  display: inline-block;
+  height: 50px;
+  width: 200px;
+  line-height: 50px;
+  padding: 0;
+  border-radius: 50px;
+  background: aliceblue;
+  border: 2px solid #0099cc;
+  margin: 10px;
+  transition: 0.5s;
+  font-family: helvetica, sans-serif;
+}
+
+.btn-slide2 {
+  border: 2px solid rgb(189, 211, 175);
+}
+
+.btn-slide2:hover {
+  background-color: rgb(189, 211, 175);
+}
+
+.btn-slide2:hover span.circle2 {
+  left: 100%;
+  margin-left: -45px;
+  background-color: #fdfdfd;
+  color: #0099cc;
+}
+
+.btn-slide2:hover span.circle2 {
+  color: rgb(189, 211, 175);
+}
+
+.btn-slide2:hover span.title2 {
+  left: 40px;
+  opacity: 0;
+}
+
+.btn-slide2:hover span.title-hover2 {
+  opacity: 1;
+  left: 40px;
+}
+
+.btn-slide2 span.circle2 {
+  display: block;
+  background-color: #0099cc;
+  position: absolute;
+  float: left;
+  margin: 5px;
+  line-height: 42px;
+  height: 40px;
+  width: 40px;
+  top: 0;
+  left: 0;
+  transition: 0.5s;
+  border-radius: 50%;
+}
+
+.btn-slide2 span.circle2 {
+  background-color: rgb(189, 211, 175);
+}
+
+.btn-slide2 span.title2,
+.btn-slide2 span.title-hover2 {
+  position: absolute;
+  left: 90px;
+  text-align: center;
+  margin: 0 auto;
+  font-size: 16px;
+  font-weight: bold;
+  color: #30abd5;
+  transition: 0.5s;
+}
+
+.btn-slide2 span.title2,
+.btn-slide2 span.title-hover2 {
+  color: rgb(189, 211, 175);
+  left: 80px;
+}
+
+.btn-slide2 span.title-hover2 {
+  left: 80px;
+  opacity: 0;
+}
+
+.btn-slide2 span.title-hover2 {
+  color: aliceblue;
 }/*# sourceMappingURL=resume.css.map */
