--- a/styles/resume.scss
+++ b/styles/resume.scss
@@ -78,6 +78,13 @@
 				width: 100%;
 				height: 100%;
 				background-color: $secondColor;
+				flex-direction: column;
+				// #left-skills {
+
+				// }
+				// #left-dl {
+				// 	position: static;
+				// }
 				.skill-headers {
 					display: block;
 					align-items: center;
@@ -137,13 +144,20 @@
 		color: $fifthColor;
 		margin: 0;
 	}
-	header {
-		#name {
-			color: $primeColor;
-			font-size: 10rem;
-			margin-top: 7%;
-			line-height: 85px;
-			margin-bottom: 1rem;
+	#profile-header {
+		width: 100%;
+		#profile-header-container {
+			display: flex;
+			position: relative;
+			width: 100%;
+			#name {
+				flex-direction: row;
+				color: $primeColor;
+				font-size: 10rem;
+				margin-top: 7%;
+				line-height: 85px;
+				margin-bottom: 1rem;
+			}
 		}
 		h2 {
 			color: $fourthColor;
@@ -159,6 +173,7 @@
 		ul {
 			list-style: none;
 			padding: 0;
+			color: $thirdColor;
 		}
 		.skill-lists {
 			padding: 0;
@@ -166,6 +181,7 @@
 			list-style: square;
 			.titleInfo {
 				margin-bottom: -20px;
+				font-weight: 400;
 			}
 			.firstInfo {
 				margin-top: 0;
@@ -223,11 +239,13 @@
 
 @media only screen and (max-width: 1000px) {
 	.rightContainer {
-		header {
-			#name {
-				color: $primeColor;
-				font-size: 8rem;
-				line-height: 70px;
+		#profile-header {
+			#profile-header-container {
+				#name {
+					color: $primeColor;
+					font-size: 8rem;
+					line-height: 70px;
+				}
 			}
 		}
 	}
@@ -247,11 +265,13 @@
 }
 @media only screen and (max-width: 900px) {
 	.rightContainer {
-		header {
-			#name {
-				color: $primeColor;
-				font-size: 7rem;
-				line-height: 60px;
+		#profile-header {
+			#profile-header-container {
+				#name {
+					color: $primeColor;
+					font-size: 7rem;
+					line-height: 60px;
+				}
 			}
 		}
 	}
@@ -272,11 +292,13 @@
 
 @media only screen and (max-width: 600px) {
 	.rightContainer {
-		header {
-			#name {
-				color: $primeColor;
-				font-size: 5rem;
-				line-height: 45px;
+		#profile-header {
+			#profile-header-container {
+				#name {
+					color: $primeColor;
+					font-size: 5rem;
+					line-height: 45px;
+				}
 			}
 		}
 	}
@@ -293,4 +315,109 @@
 			font-size: 1.6rem;
 		}
 	}
+}
+
+#wrap {
+	margin-top: 80px;
+	text-align: center;
+}
+
+.dl-icon {
+	filter: invert(92%) sepia(74%) saturate(3126%) hue-rotate(179deg) brightness(110%) contrast(104%);
+}
+
+.btn-slide2:hover span svg.dl-icon {
+	filter: invert(82%) sepia(7%) saturate(833%) hue-rotate(53deg) brightness(99%) contrast(91%);
+}
+
+.btn-slide2 {
+	position: relative;
+	display: inline-block;
+	height: 50px;
+	width: 200px;
+	line-height: 50px;
+	padding: 0;
+	border-radius: 50px;
+	background: $thirdColor;
+	border: 2px solid #0099cc;
+	margin: 10px;
+	transition: 0.5s;
+	font-family: helvetica, sans-serif;
+}
+
+.btn-slide2 {
+	border: 2px solid $primeColor;
+}
+
+.btn-slide2:hover {
+	background-color: $primeColor;
+}
+
+.btn-slide2:hover span.circle2 {
+	left: 100%;
+	margin-left: -45px;
+	background-color: #fdfdfd;
+	color: #0099cc;
+}
+
+.btn-slide2:hover span.circle2 {
+	color: $primeColor;
+}
+
+.btn-slide2:hover span.title2 {
+	left: 40px;
+	opacity: 0;
+}
+
+.btn-slide2:hover span.title-hover2 {
+	opacity: 1;
+	left: 40px;
+}
+
+.btn-slide2 span.circle2 {
+	display: block;
+	background-color: #0099cc;
+	// color: #fff;
+	position: absolute;
+	float: left;
+	margin: 5px;
+	line-height: 42px;
+	height: 40px;
+	width: 40px;
+	top: 0;
+	left: 0;
+	transition: 0.5s;
+	border-radius: 50%;
+}
+
+.btn-slide2 span.circle2 {
+	background-color: $primeColor;
+}
+
+.btn-slide2 span.title2,
+.btn-slide2 span.title-hover2 {
+	position: absolute;
+	left: 90px;
+	text-align: center;
+	margin: 0 auto;
+	font-size: 16px;
+	font-weight: bold;
+	color: #30abd5;
+	transition: 0.5s;
+}
+
+.btn-slide2 span.title2,
+.btn-slide2 span.title-hover2 {
+	color: $primeColor;
+	left: 80px;
+}
+
+.btn-slide2 span.title-hover2 {
+	left: 80px;
+	opacity: 0;
+	// filter: invert(0%) sepia(95%) saturate(7406%) hue-rotate(249deg) brightness(87%) contrast(100%);
+}
+
+.btn-slide2 span.title-hover2 {
+	color: $thirdColor;
 }
