--- a/styles/_centerBox.scss
+++ b/styles/_centerBox.scss
@@ -25,6 +25,7 @@
 	overflow-y: auto;
 	.aboutArea {
 		padding-left: 80px;
+		padding-right: 80px;
 		color: $thirdColor;
 		@include Font-Minor;
 	}
