--- a/TEMP_DELETE/play.css
+++ b/TEMP_DELETE/play.css
@@ -26,6 +26,7 @@
 }
 #centerBox .aboutArea {
   padding-left: 80px;
+  padding-right: 80px;
   color: aliceblue;
   font-size: 15px;
   font-family: "Montserrat", sans-serif;
